events/static/events/main.css
/* ... */
/* CSS variables for DARK MODE */
.dark-mode {
    --accent-color: #ffd166;
    --body-background: linear-gradient(180deg, #073b4c 60%, rgb(37, 37, 37) 100%);
    --body-bg-color: #073b4c;
    --card-bg-color: rgba(0,0,0,.2);
    --color: #fff;
    --event-div-bg: rgba(0,0,0,.4);
    --event-ended-bg: rgba(255, 0, 0, .3);
    --event-started-bg: #06d69eb2;
    --input-bg-color: rgba(0,0,0,.5);
    --modal-bg-color: rgba(7, 59, 76, .3);
    --moving-bg-color: #118ab2;
    --navbar-bg-color: #000;
    --shimmer-color: #09ffbf;
    --text-muted-color: #969696;
    --text-blue: #019ed5;
    --text-green: #06d6a0;
    --text-lightblue: #02e0ee;
    --text-red: #d30429;
    --text-yellow: #e4de20;
    --timeline-bg-color: #969696;
    --title-color: #073b4c;
}

/*
Main color palette
#e5597a -> pink
#ffd166 -> yellow
#118ab2 -> light-blue
#073b4c -> dark-blue-greenish rgb(7, 59, 76)
#06d6a0 -> green
*/

@font-face {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    src: url('./fonts/Poppins-Regular.woff2') format('woff2');
}

/* CSS animations */
@keyframes introAnimation {
    0% {
        opacity: 0;
        display: none;
        position: relative;
        left: -50%;
    }
    75% {
        position: relative;
        opacity: 1;
        left: 5%;
    }
    100% {
        position: relative;
        left: 0%;
    }
}

@keyframes shakeAnimation {
    0% {left: -.5%;position:relative;}
    50% {left: .5%;position:relative;}
    100% {left: 0%;position:relative;}
}

@keyframes fadeInAnimation {
    0% {
        opacity: 0;
        height: 0;
    }
    100% {
        opacity: 1;
        height: 100%;
    }
}

@keyframes timerNotStartedAnimation {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(50%);
    }
}

@keyframes shimmerEffect {
    0% {
        background-position: 330% 0;
    }
    70% {
        background-position: -35% 0;
    }
    100% {
        background-position: -35% 0;
    }
}

@keyframes count-out {
  0%   { transform: translateY(0); opacity: 1; }
  100% { transform: translateY(-10px); opacity: 0; }
}

@keyframes count-in {
  0%   { transform: translateY(10px); opacity: 0; }
  100% { transform: translateY(0); opacity: 1; }
}

@keyframes slideIn {
    0% { transform: translateX(100%); opacity: 0; }
    100% { transform: translateX(0); opacity: 1; }
}

@keyframes slideOut {
    0% { transform: translateX(0); opacity: 1; }
    100% { transform: translateX(100%); opacity: 0; }
}

::selection {
    background-color: #06d6a0;
}

::-moz-selection {
    background-color: #06d6a0;
}

nav {
    background-color: var(--navbar-bg-color);
    transition: background-color 1s ease;
    margin: .5rem;
    z-index: 99;
}

.nav-link:hover, .nav-link:focus {
    transform: translateY(-5px) scale(1.05);
    transition: transform .3s ease-in-out;
}

.round-img {
    border-radius:50%;
}

.cursor-pointer {
    cursor: pointer;
}

.intro-animated {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: paused;
}

.entering, .entering-1, .entering-2, .entering-3, .entering-4 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.entering-1 {
    animation-delay: .2s;
}

.entering-2 {
    animation-delay: .4s;
}

.entering-3 {
    animation-delay: .6s;
}

.entering-4 {
    animation-delay: .8s;
}

.appearing, .appearing-1, .appearing-2, .appearing-3, .appearing-4 {
    animation-name: fadeInAnimation;
    animation-duration: 1s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-timing-function: ease-out;
}

.appearing-1 {
    animation-delay: .3s;
}

.appearing-2 {
    animation-delay: .6s;
}

.appearing-3 {
    animation-delay: .9s;
}

.appearing-4 {
    animation-delay: 1.2s;
}

.shaking {
    animation-name: shakeAnimation;
    animation-duration: .3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 2;
    animation-play-state: running;
}

body {
    font-family: 'Poppins', sans-serif;
    color: var(--color) !important;
    background-color: var(--body-bg-color);
    background: var(--body-background);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    min-height: 100svh;
    transition: background-color 1s ease, background 1s ease;
    margin: 0;
}

.bg-accent {
    background-color: var(--accent-color) !important;
    color: var(--title-color) !important;
}

.text-muted {
    color: var(--text-muted-color) !important;
}

.text-blue {
    color: var(--text-blue);
}

.text-green {
    color: var(--text-green);
}

.text-lightblue {
    color: var(--text-lightblue);
}

.text-red {
    color: var(--text-red);
}

.text-yellow {
    color: var(--text-yellow);
}

.index-card:hover, .history-container .card:hover {
    transform: translateY(-10px) scale(1.05);
    transition: .4s ease;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    z-index: 10;
}

.progress-bar {
    transition: width 1s ease-in-out;
    background-color: var(--accent-color);
}

/* ---------------------------------------------- */
/* CARD VISIBILITY */

#wizard-cards {
    position: relative;
}

.step-card {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    transform: translateX(100%);
    transition: transform .5s ease, opacity .5s ease !important;
    z-index: 1;
}

.step-card.active {
    display: block !important;
    opacity: 1;
    animation: slideIn .45s ease forwards;
    z-index: 2;
}

.step-card.exiting {
    position: absolute;
    animation: slideOut 0.45s ease forwards;
    z-index: 3;
}

.step-card.d-none {
    position: absolute;
    opacity: 0;
    transform: translateX(100%);
}
/* ... */

